--- a/.github/workflows/node-tests.yml
+++ b/.github/workflows/node-tests.yml
@@ -16,87 +16,89 @@ on:
 jobs:
   frontend-tests:
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
-    
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: 'dashboard/frontend/package-lock.json'
-    
-    - name: Install dependencies
-      working-directory: dashboard/frontend
-      run: npm install --legacy-peer-deps --no-optional
-      continue-on-error: true
-    
-    - name: Check code style
-      working-directory: dashboard/frontend
-      run: npm run lint 2>/dev/null || echo "✓ No lint script defined"
-      continue-on-error: true
-    
-    - name: Verify dashboard files
-      working-directory: dashboard/frontend/public
-      run: |
-        echo "✓ Dashboard files:"
-        ls -lh *.html *.js 2>/dev/null | head -5 || echo "  Checking structure..."
-        test -f dashboard.html && echo "  ✓ dashboard.html exists" || echo "  ⚠ dashboard.html not found"
-        test -f server.js && echo "  ✓ server.js exists" || echo "  ⚠ server.js not found"
-    
-    - name: Run tests
-      working-directory: dashboard/frontend
-      run: npm test 2>/dev/null || echo "✓ No tests defined"
-      continue-on-error: true
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: npm
+          cache-dependency-path: dashboard/frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        working-directory: dashboard/frontend
+        run: npm install --legacy-peer-deps --no-optional
+        continue-on-error: true
+
+      - name: Check frontend code style
+        working-directory: dashboard/frontend
+        run: npm run lint || echo "✓ No lint script defined"
+        continue-on-error: true
+
+      - name: Verify dashboard public files
+        working-directory: dashboard/frontend/public
+        run: |
+          echo "✓ Dashboard files:"
+          ls -lh *.html *.js 2>/dev/null | head -5 || echo "  Checking structure..."
+          test -f dashboard.html && echo "  ✓ dashboard.html exists" || echo "  ⚠ dashboard.html not found"
+          test -f server.js && echo "  ✓ server.js exists" || echo "  ⚠ server.js not found"
+
+      - name: Run frontend tests
+        working-directory: dashboard/frontend
+        run: npm test || echo "✓ No frontend tests defined"
+        continue-on-error: true
 
   backend-tests:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-        cache: 'pip'
-    
-    - name: Install backend dependencies
-      working-directory: dashboard/backend
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt 2>/dev/null || pip install -r requirements_clean.txt
-        pip install pytest pytest-asyncio httpx
-      continue-on-error: true
-    
-    - name: Verify API structure
-      working-directory: dashboard/backend
-      run: |
-        echo "✓ Backend API Files:"
-        test -f main.py && echo "  ✓ main.py exists" || echo "  ⚠ main.py not found"
-        test -d app && echo "  ✓ app/ directory exists" || echo "  ⚠ app/ not found"
-        python -c "import main; print('  ✓ API imports successfully')" 2>/dev/null || echo "  ⚠ API import check skipped"
-    
-    - name: Run backend tests
-      working-directory: dashboard/backend
-      run: pytest tests/ -v 2>/dev/null || echo "✓ No backend tests defined"
-      continue-on-error: true
-    
-    - name: Verify API modules
-      run: |
-        cd dashboard/backend
-        python -c "
-import sys
-sys.path.insert(0, '.')
-try:
-    from app.services.system_integration import SystemIntegration
-    print('✓ SystemIntegration module loaded')
-except ImportError as e:
-    print(f'⚠ Module import: {e}')
-" 2>/dev/null || echo "✓ Module check skipped"
-      continue-on-error: true
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          cache: pip
+
+      - name: Install backend dependencies
+        working-directory: dashboard/backend
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt || pip install -r requirements_clean.txt
+          pip install pytest pytest-asyncio httpx
+        continue-on-error: true
+
+      - name: Verify backend API structure
+        working-directory: dashboard/backend
+        run: |
+          echo "✓ Backend API Files:"
+          test -f main.py && echo "  ✓ main.py exists" || echo "  ⚠ main.py not found"
+          test -d app && echo "  ✓ app/ directory exists" || echo "  ⚠ app/ not found"
+          python -c "import main; print('  ✓ API imports successfully')" || echo "  ⚠ API import check skipped"
+
+      - name: Run backend tests
+        working-directory: dashboard/backend
+        run: pytest tests/ -v || echo "✓ No backend tests defined"
+        continue-on-error: true
+
+      - name: Verify backend modules
+        working-directory: dashboard/backend
+        run: |
+          python <<'EOF'
+          import sys
+          sys.path.insert(0, '.')
+          try:
+              from app.services.system_integration import SystemIntegration
+              print("✓ SystemIntegration module loaded")
+          except ImportError as e:
+              print(f"⚠ Module import failed: {e}")
+          EOF
+        continue-on-error: true
