--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -11,102 +11,105 @@ on:
 jobs:
   integration-tests:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-        cache: 'pip'
-    
-    - name: Install main system dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-cov
-    
-    - name: Verify module structure
-      run: |
-        echo "Checking Python module imports..."
-        python -c "from src.adaptive_engine.decision_engine import DecisionEngine; print('✓ Decision Engine')"
-        python -c "from src.anomaly_detection.anomaly_detector import AnomalyDetector; print('✓ Anomaly Detector')"
-        python -c "from src.monitoring.resource_monitor import ResourceMonitor; print('✓ Resource Monitor')"
-        python -c "from src.preprocessing.data_preprocessor import DataPreprocessor; print('✓ Data Preprocessor')"
-        python -c "from src.recovery_actions.recovery_executor import RecoveryExecutor; print('✓ Recovery Executor')"
-        python -c "from src.orchestrator import SystemOrchestrator; print('✓ System Orchestrator')"
-    
-    - name: Run system integration test
-      run: |
-        echo "Testing system initialization..."
-        python -c "
-from src.orchestrator import SystemOrchestrator
-from src.monitoring.resource_monitor import ResourceMonitor
-from src.anomaly_detection.anomaly_detector import AnomalyDetector
-from src.preprocessing.data_preprocessor import DataPreprocessor
-print('✓ All system modules imported successfully')
-"
-    
-    - name: Verify data pipeline
-      run: |
-        echo "Checking data files..."
-        ls -lh data/*.json 2>/dev/null | wc -l
-        echo "✓ Data pipeline verified"
-    
-    - name: Check backend API
-      run: |
-        echo "Verifying backend structure..."
-        test -f "dashboard/backend/main.py" && echo "✓ Backend main.py exists"
-        test -f "dashboard/backend/app/services/system_integration.py" && echo "✓ System integration service exists"
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          cache: pip
+
+      - name: Install main system dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest pytest-cov
+
+      - name: Verify module structure
+        run: |
+          echo "Checking Python module imports..."
+          python -c "from src.adaptive_engine.decision_engine import DecisionEngine; print('✓ Decision Engine')"
+          python -c "from src.anomaly_detection.anomaly_detector import AnomalyDetector; print('✓ Anomaly Detector')"
+          python -c "from src.monitoring.resource_monitor import ResourceMonitor; print('✓ Resource Monitor')"
+          python -c "from src.preprocessing.data_preprocessor import DataPreprocessor; print('✓ Data Preprocessor')"
+          python -c "from src.recovery_actions.recovery_executor import RecoveryExecutor; print('✓ Recovery Executor')"
+          python -c "from src.orchestrator import SystemOrchestrator; print('✓ System Orchestrator')"
+
+      - name: Run system integration test
+        run: |
+          echo "Testing system initialization..."
+          python <<'EOF'
+          from src.orchestrator import SystemOrchestrator
+          from src.monitoring.resource_monitor import ResourceMonitor
+          from src.anomaly_detection.anomaly_detector import AnomalyDetector
+          from src.preprocessing.data_preprocessor import DataPreprocessor
+
+          print("✓ All system modules imported successfully")
+          EOF
+
+      - name: Verify data pipeline
+        run: |
+          echo "Checking data files..."
+          ls -lh data/*.json 2>/dev/null | wc -l
+          echo "✓ Data pipeline verified"
+
+      - name: Check backend API
+        run: |
+          echo "Verifying backend structure..."
+          test -f "dashboard/backend/main.py" && echo "✓ Backend main.py exists"
+          test -f "dashboard/backend/app/services/system_integration.py" && echo "✓ System integration service exists"
 
   code-coverage:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-        cache: 'pip'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-cov coverage
-    
-    - name: Run tests with coverage
-      run: |
-        pytest tests/ --cov=src --cov-report=xml --cov-report=term-missing 2>/dev/null || echo "Tests skipped"
-    
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        files: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: false
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          cache: pip
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest pytest-cov coverage
+
+      - name: Run tests with coverage
+        run: |
+          pytest tests/ --cov=src --cov-report=xml --cov-report=term-missing || echo "Tests skipped"
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
 
   documentation-check:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Check documentation
-      run: |
-        echo "Verifying documentation files..."
-        docs_found=0
-        for doc in README.md docs/ARCHITECTURE.md docs/DEPLOYMENT.md docs/PROJECT_DOCUMENTATION.md; do
-          if [ -f "$doc" ]; then
-            echo "✓ Found: $doc"
-            ((docs_found++))
-          fi
-        done
-        echo "Documentation files found: $docs_found"
-        
-        echo ""
-        echo "Documentation structure verified!"
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Check documentation
+        run: |
+          echo "Verifying documentation files..."
+          docs_found=0
+          for doc in README.md docs/ARCHITECTURE.md docs/DEPLOYMENT.md docs/PROJECT_DOCUMENTATION.md; do
+            if [ -f "$doc" ]; then
+              echo "✓ Found: $doc"
+              ((docs_found++))
+            fi
+          done
+          echo "Documentation files found: $docs_found"
+          echo ""
+          echo "Documentation structure verified!"
